--- a/index.Rmd
+++ b/index.Rmd
@@ -1,5 +1,6 @@
 ---
 title: Peng Chen
+subtitle: Data Scientist | Consultant
 output: 
   html_document:
     theme: darkly
@@ -7,4 +8,4 @@ output:
 
 ------------------------------------------------------------------------
 
-Hi there, welcome! My names is Peng, and I work in the Life Sciences industry. In my spare time, I like to explore recent advances in the data science, AI/ML, and programming world. If you want to know more about me, you you can find my resume [here](docs/Resume_Peng_Chen.pdf).
+Hi there, welcome! My names is Peng, and I work in the Life Sciences industry. In my spare time, I like to explore recent advances in the data science, AI/ML, and programming. If you want to know more about me, please find my resume [here](docs/Resume_Peng_Chen.pdf).
